--- a/Linux/Makefile
+++ b/Linux/Makefile
@@ -1,6 +1,6 @@
 NAME = libasm.a
 
-SRCS = ft_strlen.s ft_strcpy.s ft_strcmp.s ft_read.s ft_write.s ft_strdup.s
+SRCS = ft_strlen.s ft_strcpy.s ft_strcmp.s ft_read.s ft_write.s ft_strdup.s ft_atoi_base.s
 
 NS = nasm -f elf64 
 
