--- a/Linux/Makefile
+++ b/Linux/Makefile
@@ -1,7 +1,8 @@
 NAME = libasm.a
 
-SRCS = ft_strlen.s ft_strcpy.s ft_strcmp.s ft_read.s ft_write.s ft_strdup.s ft_atoi_base.s
-
+SRCS = ft_strlen.s ft_strcpy.s ft_strcmp.s ft_read.s \
+		ft_write.s ft_strdup.s ft_atoi_base.s\
+		ft_list_push_front.s ft_create_elem.s
 NS = nasm -g -f elf64 
 
 OBJS = ${SRCS:.s=.o}
@@ -17,7 +18,7 @@ all: $(NAME)
 $(NAME):	$(OBJS)
 
 bin:	main.c $(NAME)
-	gcc -g -zexecstack main.c $(NAME) -o bin
+	gcc -g -fsanitize=address -zexecstack main.c $(NAME) -o bin
 
 clean:
 		$(RM) $(OBJS)
