--- a/Linux/.vscode/launch.json
+++ b/Linux/.vscode/launch.json
@@ -4,13 +4,12 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
-        
         {
             "name": "(gdb) Launch",
             "type": "cppdbg",
             "request": "launch",
             "program": "${workspaceFolder}/bin",
-            "args": [],
+            "args": ["4"],
             "stopAtEntry": false,
             "cwd": "${fileDirname}",
             "environment": [],
