--- a/Linux/Makefile
+++ b/Linux/Makefile
@@ -3,7 +3,7 @@ NAME = libasm.a
 SRCS = ft_strlen.s ft_strcpy.s ft_strcmp.s ft_read.s \
 		ft_write.s ft_strdup.s ft_atoi_base.s\
 		ft_list_push_front.s ft_create_elem.s\
-		ft_list_size.s ft_list_last.s
+		ft_list_size.s ft_list_last.s ft_list_remove_if.s
 NS = nasm -g -f elf64 
 
 OBJS = ${SRCS:.s=.o}
