--- a/Linux/Makefile
+++ b/Linux/Makefile
@@ -12,6 +12,7 @@ SRCS = ft_strlen.s ft_strcpy.s ft_strcmp.s ft_read.s \
 		linked_lists/ft_mergeSort.s\
 		linked_lists/ft_breakList.s\
 		linked_lists/ft_mergeLists.s\
+		linked_lists/ft_freeList.s\
 		linked_lists/ft_list_push.s
 NS = nasm -g -f elf64 
 
@@ -28,7 +29,7 @@ all: $(NAME)
 $(NAME):	$(OBJS)
 
 bin:	main.c $(NAME)
-	gcc -g -zexecstack main.c $(NAME) -o bin
+	gcc -g -fsanitize=address main.c $(NAME) -o bin
 
 clean:
 		$(RM) $(OBJS)
