--- a/Linux/JTests/Makefile
+++ b/Linux/JTests/Makefile
@@ -1,17 +1,23 @@
 #make NAME=ft_atoi_baseTests
 
-NAME = test
+NAME = ft_atoi_baseTests
+
+LIBASM = ../libasm.a
 
 SRC = $(NAME).c
 
-LIB = libasm.a jtest.a
+LIB = $(LIBASM) jtest.a
 
 all: $(NAME)
 
-$(NAME): $(SRC)
-	gcc -z noexecstack -o $(NAME) $(SRC) $(LIB)
+$(NAME): $(SRC) $(LIBASM)
+	gcc -g -z noexecstack -o $(NAME) $(SRC) $(LIB)
+
+$(LIBASM):
+	make -C ..
 
 clean:
+	make -C .. fclean
 	rm -f $(NAME)
 
 re: clean all
