--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "files.associations": {
 		"errno.h": "c",
 		"functions.h": "c",
-		"jtest.h": "c"
+		"jtest.h": "c",
+		"string.h": "c"
 	}
 }
